@@ -85,7 +85,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
   public CorsFilter corsFilter() {
     CorsConfiguration corsConfiguration = new CorsConfiguration();
     corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+    corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000"));
     corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
                                                       "Accept", "Authorization", "Origin, Accept", "X-Requested-With",
                                                       "Access-Control-Request-Method", "Access-Control-Request-Headers"));
